--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "@angular/router": "^5.2.0",
     "@codebakery/origami": "^2.0.2",
     "@ng-bootstrap/ng-bootstrap": "^1.0.1",
-    "angularfire2": "^5.0.0-rc.6",
+    "angularfire2": "5.0.0-rc.6",
+    "bootstrap": "^4.1.1",
     "core-js": "^2.4.1",
-    "firebase": "^4.11.0",
-    "grapesjs": "^0.14.15",
+    "firebase": "4.11.0",
+    "grapesjs": "^0.14.21",
     "grapesjs-blocks-basic": "^0.1.7",
     "grapesjs-blocks-flexbox": "^0.1.1",
     "grapesjs-lory-slider": "^0.1.5",
@@ -35,9 +36,10 @@
     "grapesjs-style-gradient": "^1.0.5",
     "grapesjs-tabs": "^0.1.2",
     "html2canvas": "^1.0.0-alpha.12",
+    "jquery": "^3.3.1",
     "ng2-toastr": "^4.1.2",
     "ngx-file-drop": "^3.0.2",
-    "rxjs": "^5.5.6",
+    "rxjs": "^5.5.11",
     "simple-drawing-board": "^1.4.1",
     "zone.js": "^0.8.19"
   },
